# PO_MiRTS_Lab4

POMiRTS_Lab4/devel/: .catkin  local_setup.sh  setup.sh
POMiRTS_Lab4/devel/share/Lab4/cmake/: Lab4-msg-paths.cmake
POMiRTS_Lab4/src/Lab4/: CMakeLists.txt  mainpage.dox  manifest.xml
POMiRTS_Lab4/src/Lab4/nodes/: Publisher1.py  Subscriber1.py
